# experts_barycenter

./: .gitignore  DiscreteBarycenter.tex  ExpertsBarycenter.tex  README.md  barybib.tex  replicate.sh
code/: composition_var.m  dirichlet_mle.R  dirichlet_mle.m  dwbary.m  paper_results.m  plot_dwbary.m  rdirichlet.m  test_discrete1.m
data/: opiod
data/spf/: prob.xlsx
python/: README.md  pyproject.toml  requirements.txt
python/archive/: composition.py  dirichlet.py  plotting.py  simulations.py
python/examples/: application.py  ecb_spf_backtest.py  ecb_spf_figures.py  gjp_figures.py  robustness.py  simulations_study.py  spf_application.py  spf_backtest.py  spf_backtest_blend_figure.py  spf_backtest_distributions.py  spf_backtest_figures.py  spf_blend.py
python/wbarycenter/: __init__.py  core.py  utils.py
